# langchain-opperai

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  demo.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/: provider.ipynb
langchain_opper/: __init__.py
langchain_opper/chat_models/: __init__.py  base.py
langchain_opper/llms/: __init__.py  provider.py
langchain_opperai/: chat_models.py
tests/: __init__.py  demo.py
tests/integration_tests/: __init__.py  test_chat_models.py
tests/unit_tests/: __init__.py  test_chat_models.py
